--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -283,11 +283,11 @@
         justify-content: space-between;
         align-items: center;
         .info {
-            font-size: 1.5vw;
+            font-size: 80%;
         }
         .footer__img {
-            width: 10px;
-            height: 10px;
+            width: 0.5vw;
+            // height: 10px;
         }
     }
     // .line {
