--- a/resources/scss/component/_reset.scss
+++ b/resources/scss/component/_reset.scss
@@ -134,7 +134,7 @@ body {
     font-size: $font-size-base;
     line-height: $line-height-base;
     font-family: $font-family-base;
-    color: $font-color-base;
+    color: $cartiercolor;
     font-weight: $font-weight-base;
 }
 
@@ -154,7 +154,7 @@ a {
 
         &:active,
         &:hover {
-            text-decoration: underline;
+            text-decoration: none;
         }
     }
 }
