--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -1,5 +1,21 @@
 // 사이트 컨텐츠 내용
 
+//배경 비디오
+.video-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+}
+.video-container video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 // HEADER
 #header {
     @include ff-lora;
@@ -224,7 +240,7 @@
         font-weight: 500;
         font-style: normal;
         font-size: 4.5vw;
-        color: #fff;
+        color: $white;
         line-height: 130%;
         margin-bottom: 3%;
         @include tabletMore {
@@ -235,7 +251,7 @@
         font-size: 2vw;
         font-weight: 300;
         line-height: 160%;
-        color: #fff;
+        color: $white;
         @include tabletMore {
             font-size: 1.5vw;
             margin-bottom: 12%;
@@ -276,7 +292,7 @@
 }
 // FOOTER
 #footer {
-    background: #d50032;
+    background: $cartiercolor;
 
     .footer__contents {
         display: flex;
