--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1,2 +1,7 @@
 @import 'component/include';
 @import 'pattern/p_include';
+
+// 사진 opacity놓고 마지막에 비교할때
+// body {
+//     background: url(../images/component/common/CARTIERmainpc.png) no-repeat 50% 0%;
+// }
