--- a/resources/css/output/styles.css
+++ b/resources/css/output/styles.css
@@ -128,7 +128,7 @@ body {
   font-size: 1.7rem;
   line-height: 1.5;
   font-family: "Noto Sans KR", sans-serif;
-  color: #d50032;
+  color: #fff;
   font-weight: 400;
 }
 
@@ -330,7 +330,7 @@ img {
 .inner {
   position: relative;
   width: 100%;
-  max-width: 1500px;
+  max-width: 1700px;
   margin: 0 auto;
   padding: 0 20px;
 }
@@ -388,7 +388,7 @@ img {
 @media (min-width: 1024px) {
   #header {
     width: 100%;
-    max-width: 1500px;
+    max-width: 1700px;
     margin: 0 auto;
     padding: 0 20px;
   }
@@ -666,6 +666,7 @@ img {
   margin-top: 10%;
   margin-bottom: 25%;
   letter-spacing: -1px;
+  opacity: 0.7;
   font-family: "Lora", sans-serif;
 }
 @media (min-width: 600px) {
@@ -733,6 +734,7 @@ img {
 .sec-cartier .sec-g__cont .sec-g__desc {
   font-weight: normal;
   font-size: 4vw;
+  opacity: 0.7;
 }
 @media (min-width: 1024px) {
   .sec-cartier .sec-g__cont .sec-g__desc {
@@ -743,6 +745,7 @@ img {
   font-size: 3vw;
   margin-top: 3%;
   margin-bottom: 12%;
+  opacity: 0.7;
   font-family: "Lora", sans-serif;
 }
 @media (min-width: 600px) {
@@ -767,6 +770,7 @@ img {
   font-weight: 400;
   line-height: 100%;
   margin-bottom: 3%;
+  opacity: 0.7;
 }
 @media (min-width: 600px) {
   .sec-cartier2 .sec-g__tit {
@@ -793,6 +797,7 @@ img {
   font-weight: normal;
   font-size: 4vw;
   margin-bottom: 15%;
+  opacity: 0.7;
 }
 @media (min-width: 600px) {
   .sec-cartier2 .sec-g__cont .sec-g__desc {
@@ -865,6 +870,7 @@ img {
   line-height: 100%;
   margin-top: 20%;
   margin-bottom: 7%;
+  opacity: 0.7;
 }
 @media (min-width: 600px) {
   .sec-cartier3 .sec-g__tit {
@@ -949,6 +955,7 @@ img {
   line-height: 100%;
   margin-top: 11%;
   margin-bottom: 10%;
+  opacity: 0.7;
 }
 @media (min-width: 600px) {
   .sec-cartier4 .sec-g__tit {
