--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -30,6 +30,7 @@
     margin-top: 10%;
     margin-bottom: 25%;
     letter-spacing: -1px;
+    opacity: 0.7;
     @include ff-lora;
     @include mobileMore {
         font-size: 28vw;
@@ -47,6 +48,7 @@
         font-size: 15vw;
         font-weight: 400;
         margin-bottom: 8%;
+        // opacity: 0.7;
         @include mobileMore {
             font-size: 18vw;
             margin-bottom: 3%;
@@ -84,6 +86,7 @@
         .sec-g__desc {
             font-weight: normal;
             font-size: 4vw;
+            opacity: 0.7;
             @include tabletMore {
                 font-size: 2.6875rem;
             }
@@ -92,6 +95,7 @@
             font-size: 3vw;
             margin-top: 3%;
             margin-bottom: 12%;
+            opacity: 0.7;
             @include ff-lora;
             @include mobileMore {
                 margin-bottom: 30%;
@@ -113,6 +117,7 @@
         font-weight: 400;
         line-height: 100%;
         margin-bottom: 3%;
+        opacity: 0.7;
         @include mobileMore {
             margin-bottom: 5%;
         }
@@ -134,6 +139,7 @@
             font-weight: normal;
             font-size: 4vw;
             margin-bottom: 15%;
+            opacity: 0.7;
             @include mobileMore {
                 display: block;
                 margin-bottom: 10%;
@@ -194,6 +200,7 @@
         line-height: 100%;
         margin-top: 20%;
         margin-bottom: 7%;
+        opacity: 0.7;
         @include mobileMore {
             margin-top: 35%;
         }
@@ -266,6 +273,7 @@
         line-height: 100%;
         margin-top: 11%;
         margin-bottom: 10%;
+        opacity: 0.7;
         @include mobileMore {
             margin-top: 23%;
         }
