--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -86,7 +86,7 @@
         .sec-g__desc {
             font-weight: normal;
             font-size: 4vw;
-            opacity: 0.7;
+            // opacity: 0.7;
             @include tabletMore {
                 font-size: 2.6875rem;
             }
@@ -95,7 +95,7 @@
             font-size: 3vw;
             margin-top: 3%;
             margin-bottom: 12%;
-            opacity: 0.7;
+            // opacity: 0.7;
             @include ff-lora;
             @include mobileMore {
                 margin-bottom: 30%;
@@ -117,7 +117,7 @@
         font-weight: 400;
         line-height: 100%;
         margin-bottom: 3%;
-        opacity: 0.7;
+        // opacity: 0.7;
         @include mobileMore {
             margin-bottom: 5%;
         }
@@ -139,7 +139,7 @@
             font-weight: normal;
             font-size: 4vw;
             margin-bottom: 15%;
-            opacity: 0.7;
+            // opacity: 0.7;
             @include mobileMore {
                 display: block;
                 margin-bottom: 10%;
@@ -201,7 +201,7 @@
         line-height: 100%;
         margin-top: 20%;
         margin-bottom: 7%;
-        opacity: 0.7;
+        // opacity: 0.7;
         @include mobileMore {
             margin-top: 35%;
         }
@@ -274,7 +274,7 @@
         line-height: 100%;
         margin-top: 11%;
         margin-bottom: 10%;
-        opacity: 0.7;
+        // opacity: 0.7;
         @include mobileMore {
             margin-top: 23%;
         }
