--- a/resources/scss/pattern/_p_main.scss
+++ b/resources/scss/pattern/_p_main.scss
@@ -173,24 +173,73 @@
             @include tabletMore {
                 width: 65%;
             }
-            .sec-g__img {
-                border-radius: 18px;
-                @include mobileMore {
-                    height: 460px;
-                }
-                @include tabletMore {
-                    height: 700px;
-                }
+        }
+        .sec-g__link {
+            position: relative;
+            display: inline-block;
+            overflow: hidden;
+            border-radius: 18px;
+            transition: background 0.7s;
+            background-image: url('/resources/images/component/common/lovering.avif');
+            background-size: cover; /* 이미지가 요소를 가득 채우도록 설정 */
+            background-position: center; /* 백그라운드 이미지 전환 */
+        }
+        .sec-g__hover {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: $white;
+            @include ff-lora;
+            font-size: 3rem;
+            font-weight: 400;
+            text-align: center;
+            background: $cartiercolor;
+            opacity: 0; /* 기본 상태에서는 숨김 */
+            transition: opacity 0.7s;
+            border-radius: 18px;
+            @include mobileMore {
+                height: 460px;
             }
-            .sec-g__img2 {
-                border-radius: 18px;
-                @include mobileMore {
-                    object-fit: cover;
-                    height: 460px;
-                }
-                @include tabletMore {
-                    height: 700px;
-                }
+            @include tabletMore {
+                height: 700px;
+            }
+        }
+        .sec-g__link:hover {
+            background-image: url(''); /* 마우스 오버 시 변경할 백그라운드 이미지 */
+        }
+
+        .sec-g__link:hover .sec-g__hover {
+            opacity: 1; /* 마우스 오버 시 텍스트 표시 */
+        }
+        .sec-g__img {
+            // object-fit: cover;
+            border-radius: 18px;
+            @include mobileMore {
+                height: 460px;
+            }
+            @include tabletMore {
+                height: 700px;
+            }
+        }
+
+        .sec-g__img2 {
+            object-fit: cover;
+            border-radius: 18px;
+
+            @include mobileMore {
+                object-fit: cover;
+                height: 460px;
+            }
+            @include tabletMore {
+                height: 700px;
             }
         }
     }
@@ -220,19 +269,29 @@
             object-fit: cover;
             border-radius: 18px;
             margin-bottom: 7%;
+            transition: 0.3 ease;
+            filter: brightness(70%);
             @include tabletMore {
                 width: 100%;
                 height: 100vh;
+            }
+            .sec-g__img:hover {
+                filter: brightness(100%) !important;
             }
         }
         .sec-g__img4 {
             object-fit: cover;
             border-radius: 18px;
             margin-bottom: 7%;
+            transition: 0.3 ease;
+            opacity: 0.7;
             @include tabletMore {
                 width: 100%;
                 height: 100vh;
                 margin-bottom: 0;
+            }
+            .sec-g__img4:hover {
+                opacity: 1 !important;
             }
         }
     }
